mash: Fix the app list button's ink drop deactivation.

Always use AppListDelegateImpl for Shell notifications.
(avoid AppListPresenterDelegate[Mus] duplication/disparity)

Remove a dubious cleanup TODO, may relate to crbug.com/733662 (?)
(the delegate may be necessary until ui/app_list moves into ash)

Bug: 730887
Change-Id: I19a3f8adc7ca66a7ad81fb254198c96fb4428ae3