ash/app_list/test_app_list_view_presenter_impl.cc
@@ -5,7 +5,9 @@
 #include "ash/app_list/test_app_list_view_presenter_impl.h"
 
 #include "ash/app_list/app_list_presenter_delegate_factory.h"
+#include "ash/shell.h"
 #include "base/memory/ptr_util.h"
+#include "ui/app_list/presenter/app_list.h"
 #include "ui/app_list/presenter/test/test_app_list_view_delegate_factory.h"
 
 namespace ash {
@@ -14,6 +16,10 @@ TestAppListViewPresenterImpl::TestAppListViewPresenterImpl()
     : app_list::AppListPresenterImpl(base::MakeUnique<
                                      AppListPresenterDelegateFactory>(
           base::MakeUnique<app_list::test::TestAppListViewDelegateFactory>())) {
+  // Connect Ash's app list implementation to the presenter.
+  app_list::mojom::AppListPtr app_list_ptr;
+  Shell::Get()->app_list()->BindRequest(mojo::MakeRequest(&app_list_ptr));
+  SetAppList(std::move(app_list_ptr));
 }
 
 TestAppListViewPresenterImpl::~TestAppListViewPresenterImpl() {}
