ash/wm/window_cycle_controller_unittest.cc
@@ -476,10 +476,6 @@ TEST_F(WindowCycleControllerTest, MostRecentlyUsed) {
 
 // Tests that beginning window selection hides the app list.
 TEST_F(WindowCycleControllerTest, SelectingHidesAppList) {
-  // TODO: fails in mash because of AppListPresenter. http://crbug.com/696028.
-  if (Shell::GetAshConfig() == Config::MASH)
-    return;
-
   // The tested behavior relies on the app list presenter implementation.
   TestAppListViewPresenterImpl app_list_presenter_impl;
 
@@ -487,8 +483,8 @@ TEST_F(WindowCycleControllerTest, SelectingHidesAppList) {
 
   std::unique_ptr<aura::Window> window0(CreateTestWindowInShellWithId(0));
   std::unique_ptr<aura::Window> window1(CreateTestWindowInShellWithId(1));
-  app_list_presenter_impl.Show(
-      display::Screen::GetScreen()->GetPrimaryDisplay().id());
+  app_list_presenter_impl.Show(GetPrimaryDisplay().id());
+  RunAllPendingInMessageLoop();
   EXPECT_TRUE(app_list_presenter_impl.IsVisible());
   controller->HandleCycleWindow(WindowCycleController::FORWARD);
   EXPECT_FALSE(app_list_presenter_impl.IsVisible());
@@ -714,7 +710,7 @@ TEST_F(WindowCycleControllerTest, MultiDisplayPositioning) {
   if (Shell::GetAshConfig() == Config::MASH)
     return;
 
-  int64_t primary_id = display::Screen::GetScreen()->GetPrimaryDisplay().id();
+  int64_t primary_id = GetPrimaryDisplay().id();
   display::DisplayIdList list =
       display::test::CreateDisplayIdListN(2, primary_id, primary_id + 1);
 
